# experimentation-platform

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.tmp_dagster_home_uqxfk3lz/storage/: criteo_data_file  decision_report_asset  experiment_health_checks_asset  experiment_observations_mart  experiment_registry_seed  experiment_results_asset  hillstrom_data_file  raw_criteo_uplift  raw_hillstrom  uplift_results_asset
.tmp_dagster_home_uqxfk3lz/storage/a9f8e5f4-439d-487e-929d-8da4d95035fc/compute_logs/: biurxovv.err  duiqqmyw.err  gswdxvop.err  ktpdjuxk.err  npkyhvpn.err  saqmcdbv.err  uasizhld.err  yqnxdoxg.err
.tmp_dagster_home_uqxfk3lz/storage/cb88025b-5d02-41de-8039-4702db71b0dd/compute_logs/: bamryukh.err  llaknpuc.err  tsrfusvz.err  urtizphn.err  vdqeawrj.err  xegfnvam.err  xfkvngxm.err  ystecjgg.err
analysis/: ab_tests.py  cuped.py  decision_report.py  srm_checks.py  uplift_models.py
db/: init.sql
docs/: data_analyst_role.md  demo_script.md  project_portfolio_case_study.md  runbook.md
experimentation_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
orchestration/dagster_app/: assets_analysis.py  assets_checks.py  assets_ingest.py  assets_marts.py  assets_reporting.py  assets_uplift.py  defs.py
reports/: experiment_1_report.md
scripts/: download_data.py  load_to_postgres.py
tests/: test_ab.py  test_cuped.py  test_srm.py  test_uplift.py
